# django-k8s

./: .gitignore  pyproject.toml
_project/: asgi.py  settings.py  urls.py  wsgi.py
